# webrtc-vs-websockets

./: .gitignore
client-browser/: client.js  index.html  package.json
webrtc-server/: Cargo.toml
webrtc-server/src/: main.rs
websockets-server/: app.js  package.json
