[package]
name = "server"
version = "0.1.0"
authors = ["Steve Mostovoy <stevemostovoysm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc-unreliable = "0.4.0"
clap = "2.32"
env_logger = "0.7"
futures = { version = "0.3" }
hyper = { version = "0.14", features = ["stream"] }
tokio = { version = "0.2", features = ["macros"] }
log = "0.4"
